oidc-auth/overlays/keycloak/oauth2-proxy-signout-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - kubeflow.82.66.198.32.nip.io
  http:
  - match:
    - uri:
        prefix: /logout
    rewrite:
      uri: /oauth2/sign_out
    route:
    - destination:
        host: oauth2-proxy.auth.svc.cluster.local
        port:
          number: 4180
    headers:
      request:
        set:
          X-Auth-Request-Redirect: https://auth.82.66.198.32.nip.io/realms/kubeflow/protocol/openid-connect/logout?redirect_uri=https%%3A%%2F%%2Fkubeflow.82.66.198.32.nip.io

# X-Auth-Request-Redirect: https://auth.82.66.198.32.nip.io/realms/kubeflow/protocol/openid-connect/logout?post_logout_redirect_uri=https%%3A%%2F%%2Fkubeflow.82.66.198.32.nip.io
